--- a/styles/globals.css
+++ b/styles/globals.css
@@ -132,6 +132,16 @@ header a {
   overflow: hidden;
   position: relative;
 }
+
+.carousel .item .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
 .carousel .list .item {
   width: 100%;
   height: 100%;
