--- a/styles/globals.css
+++ b/styles/globals.css
@@ -148,6 +148,11 @@ header a {
   position: absolute;
   inset: 0 0 0 0;
 }
+
+.countdown {
+  color: #fff;
+  overflow: hidden;
+}
 .carousel .list .item img {
   width: 100%;
   height: 100%;
